--- a/index.html
+++ b/index.html
@@ -7,10 +7,154 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>PabloParking</title>
           <link rel="stylesheet" type="text/css" href="./styles/style.css">
-          <link rel="shortcut icon" href="./images/jeep.png" type="image/x-icon">
+          <link rel="stylesheet" type="text/css" href="./styles/navbar.css">
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+          <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
      </head>
 
      <body>
+
+          <!--? Navbar Start -->
+          <header>
+               <nav id="navbar">
+                    <div class="nav-logo">
+                         <div class="logo">
+                              <a href="index.html">
+                                   <div>
+                                        <img src="./images/logo.png" alt="">
+                                   </div>
+                                   <div id="logo-txt">PabloParking</div>
+                              </a>
+                         </div>
+                    </div>
+                    <div class="nav-link">
+                         <ul>
+                              <a href="/">
+                                   <li>Home</li>
+                              </a>
+                              <a href="#services">
+                                   <li>Services</li>
+                              </a>
+                              <a href="#about">
+                                   <li>About Us</li>
+                              </a>
+                              <a href="#">
+                                   <li>Contact Us</li>
+                              </a>
+                         </ul>
+                    </div>
+                    <div class="nav-right-login">
+                         <a href="#"><button>SignUp</button></a>
+                         <a href="#"><button>LogIn</button></a>
+                    </div>
+               </nav>
+          </header>
+          <!--? Navbar End -->
+
+
+          <!--? Main-Section Start -->
+          <main id="main">
+               <section id="container">
+                    <seciton id="main-left">
+                         <!--  -->
+                         <div class="welcome">
+                              <div><Span>Looking</Span> to</div>
+                              <div>
+                                   Park your car
+                              </div>
+                         </div>
+                         <div>
+                              <p>
+                                   Transforming Parking Into Intelligent Mobility Hubs
+                              </p>
+                         </div>
+                         <div class="app-store">
+                              <div>
+                                   <img src="./images/512x512.png" alt="">
+                              </div>
+                              <div>
+                                   <img src="./images/ios.png" alt="">
+                              </div>
+                         </div>
+                    </seciton>
+                    <seciton id="main-right">
+                         <!--  -->
+                         <div class="image-bg"></div>
+                         <div class="jeep-img">
+                              <img src="./images/pngwing1.com.png" alt="">
+                         </div>
+                    </seciton>
+               </section>
+
+          </main>
+          <!--? Main-Section End -->
+
+          <!--? Servies Section Start -->
+          <section id="services">
+               <div class="services-head">
+                    <h1>Services</h1>
+               </div>
+               <div id="services-main">
+
+               </div>
+          </section>
+          <!--? Servies Section End -->
+
+          <!--? About Section Start -->
+          <section id="about">
+               <div class="about-head">
+                    <p>About Us</p>
+                    <p>Best Customer Experience</p>
+               </div>
+               <div class="about-container1">
+                    <div class="about-left">
+                         <img src="./images/wrangler.png" alt="">
+                    </div>
+                    <div class="about-right">
+                         <div>
+                              <h1>About Safety</h1>
+                              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio error eius quo
+                                   totam
+                                   eum,
+                                   dignissimos pariatur rem incidunt ex! Laudantium enim omnis et explicabo deserunt
+                                   debitis
+                                   tempora, minus fugit praesentium. Lorem ipsum dolor sit amet consectetur adipisicing
+                                   elit.
+                                   At,
+                                   praesentium hic laudantium provident dolor ut iste illum deserunt, aspernatur ipsum
+                                   amet.
+                                   Fugiat possimus unde odio vitae assumenda ipsum error quia.</p>
+
+                         </div>
+                    </div>
+               </div>
+               <div class="about-container2">
+
+                    <div class="about-left">
+                         <div>
+                              <h1>About Management</h1>
+                              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio error eius quo
+                                   totam
+                                   eum,
+                                   dignissimos pariatur rem incidunt ex! Laudantium enim omnis et explicabo deserunt
+                                   debitis
+                                   tempora, minus fugit praesentium. Lorem ipsum dolor sit amet consectetur adipisicing
+                                   elit.
+                                   At,
+                                   praesentium hic laudantium provident dolor ut iste illum deserunt, aspernatur ipsum
+                                   amet.
+                                   Fugiat possimus unde odio vitae assumenda ipsum error quia.</p>
+
+                         </div>
+                    </div>
+                    <div class="about-right">
+                         <img src="./images/sedan.png" alt="">
+                    </div>
+               </div>
+          </section>
+          <!--? About Section End -->
+
+
           <script src="./scripts/index.js"></script>
      </body>
 
