adding functionnalities for the services part

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="nav-link">
                          <ul>
-                              <a href="/">
+                              <a href="#main">
                                    <li>Home</li>
                               </a>
                               <a href="#services">
@@ -76,6 +76,8 @@
                                    <img src="./images/ios.png" alt="">
                               </div>
                          </div>
+
+
                     </seciton>
                     <seciton id="main-right">
                          <!--  -->
@@ -96,7 +98,148 @@
                </div>
                <div id="services-main">
 
+                    <div class="form-container">
+                         <div class="form-enhancer"><img src="./images/logo.png" alt=""> </div>
+                         <form id="form">
+                              <div class="input-box"> <input type="text" id="name" placeholder="Name"> </div>
+                              <div class="input-box" id="vehicleType">
+                                   <div class="select-text"> Select your vehicle </div>
+                                   <ul id="vehicle">
+                                        <li>Jeep</li>
+                                        <li>Bike</li>
+                                        <li>Car</lie>
+                                        <li>Bus</li>
+                                        <li>Truck</li>
+                                   </ul>
+                              </div>
+                              <div class="input-box">
+                                   <input type="text" id="reg_num" placeholder="Registeration number">
+                              </div>
+                              <div>
+                                   <input type="button" value="Find Slot" onclick="findSlot()">
+                              </div>
+                              <!-- <i>Find Slot</i> -->
+                              <!-- <div class="input-box">
+                                   <input type="text" placeholder="Name">
+                              </div> -->
+                         </form>
+                    </div>
+                    <!-- <div class="selected-vehicle">
+                         <div>
+                              <img src="./" alt="">
+                         </div>
+                    </div> -->
+                    <div class="parking-gif">
+                         <img src="https://cdn.dribbble.com/users/2118336/screenshots/12113942/media/ec72a5e052af7792a64a1f3fd156af28.gif"
+                              alt="">
+                    </div>
                </div>
+               <!--  -->
+               <br>
+               <hr>
+               <!--  -->
+               <section id="parking">
+                    <div id="floor">
+                         <div id="lane1" class="lane">
+                              <div class="slot" id="slot-1">
+                                   <img src="./images/motorbike.png" alt="">
+                              </div>
+                              <div class="slot" id="slot-2">
+                                   <img src="./images/motorbike.png" alt="">
+                              </div>
+                              <div class="slot" id="slot-3">
+                                   <img src="./images/motorbike.png" alt="">
+                              </div>
+                              <div class="slot" id="slot-4">
+                                   <img src="./images/motorbike.png" alt="">
+                              </div>
+                              <div class="slot" id="slot-5">
+                                   <img src="./images/motorbike.png" alt="">
+                              </div>
+
+                         </div>
+                         <div id="lane2" class="lane">
+                              <div class="slot" id="slot-1">
+                                   <img src="./images/safari (2).png" alt="">
+                              </div>
+                              <div class="slot" id="slot-2">
+                                   <img src="./images/safari (2).png" alt="">
+                              </div>
+                              <div class="slot" id="slot-3">
+                                   <img src="./images/safari (2).png" alt="">
+                              </div>
+                              <div class="slot" id="slot-4">
+                                   <img src="./images/safari (2).png" alt="">
+                              </div>
+                              <div class="slot" id="slot-5">
+                                   <img src="./images/safari (2).png" alt="">
+                              </div>
+
+                         </div>
+                         <div id="lane3" class="lane">
+                              <div class="slot" id="slot-1">
+                                   <img src="./images/car.png" alt="">
+
+                              </div>
+                              <div class="slot" id="slot-2">
+                                   <img src="./images/car.png" alt="">
+
+                              </div>
+                              <div class="slot" id="slot-3">
+                                   <img src="./images/car.png" alt="">
+
+                              </div>
+                              <div class="slot" id="slot-4">
+                                   <img src="./images/car.png" alt="">
+
+                              </div>
+                              <div class="slot" id="slot-5">
+                                   <img src="./images/car.png" alt="">
+
+                              </div>
+
+                         </div>
+                         <div id="lane4" class="lane">
+                              <div class="slot" id="slot-1">
+                                   <img src="./images/bus (1).png" alt="">
+                              </div>
+                              <div class="slot" id="slot-2">
+                                   <img src="./images/bus (1).png" alt="">
+                              </div>
+                              <div class="slot" id="slot-3">
+                                   <img src="./images/bus (1).png" alt="">
+                              </div>
+                              <div class="slot" id="slot-4">
+                                   <img src="./images/bus (1).png" alt="">
+                              </div>
+                              <div class="slot" id="slot-5">
+                                   <img src="./images/bus (1).png" alt="">
+                              </div>
+
+                         </div>
+                         <div id="lane5" class="lane">
+                              <div class="slot" id="slot-1">
+                                   <img src="./images/delivery-truck.png" alt="">
+                              </div>
+                              <div class="slot" id="slot-2">
+                                   <img src="./images/delivery-truck.png" alt="">
+                              </div>
+                              <div class="slot" id="slot-3">
+                                   <img src="./images/delivery-truck.png" alt="">
+                              </div>
+                              <div class="slot" id="slot-4">
+                                   <img src="./images/delivery-truck.png" alt="">
+                              </div>
+                              <div class="slot" id="slot-5">
+                                   <img src="./images/delivery-truck.png" alt="">
+                              </div>
+
+                         </div>
+                    </div>
+                    <div class="parking-recipt">
+                         <h1></h1>
+                    </div>
+               </section>
           </section>
           <!--? Servies Section End -->
 
