--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                          <div class="welcome">
                               <div><Span>Looking</Span> to</div>
                               <div>
-                                   Park your car
+                                   Park your car1
                               </div>
                          </div>
                          <div>
@@ -116,7 +116,7 @@
                                    <input type="text" id="reg_num" placeholder="Registeration number">
                               </div>
                               <div>
-                                   <input type="button" value="Find Slot" onclick="findSlot()">
+                                   <a href="#parking"> <input type="button" value="Find Slot" onclick="findSlot()"></a>
                               </div>
                               <!-- <i>Find Slot</i> -->
                               <!-- <div class="input-box">
@@ -178,23 +178,23 @@
                          </div>
                          <div id="lane3" class="lane">
                               <div class="slot" id="slot-1">
-                                   <img src="./images/car.png" alt="">
+                                   <img src="./images/car1.png" alt="">
 
                               </div>
                               <div class="slot" id="slot-2">
-                                   <img src="./images/car.png" alt="">
+                                   <img src="./images/car1.png" alt="">
 
                               </div>
                               <div class="slot" id="slot-3">
-                                   <img src="./images/car.png" alt="">
+                                   <img src="./images/car1.png" alt="">
 
                               </div>
                               <div class="slot" id="slot-4">
-                                   <img src="./images/car.png" alt="">
+                                   <img src="./images/car1.png" alt="">
 
                               </div>
                               <div class="slot" id="slot-5">
-                                   <img src="./images/car.png" alt="">
+                                   <img src="./images/car1.png" alt="">
 
                               </div>
 
@@ -237,7 +237,29 @@
                          </div>
                     </div>
                     <div class="parking-recipt">
-                         <h1></h1>
+                         <h1>Parking Recipt</h1>
+
+                         <div class="recipt-container">
+                              <div class="recipt">
+                                   Receipt no.: <span>E3231</span>
+                              </div>
+                              <div class="name">
+                                   name: <span>Karan</span>
+
+                              </div>
+                              <div class="reg_num">
+                                   Reg no.: <span>UP32 12 2312</span>
+                              </div>
+                              <div class="date">
+                                   Date: <span>26 jan</span>
+                              </div>
+                              <div class="promo">
+                                   <input type="text" placeholder="Enter Coupon code">
+                              </div>
+                              <div class="apply_promo">
+                                   <button>Apply Promo</button>
+                              </div>
+                         </div>
                     </div>
                </section>
           </section>
