Styling Of receipt and form

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                          <div class="welcome">
                               <div><Span>Looking</Span> to</div>
                               <div>
-                                   Park your car1
+                                   Park your Car
                               </div>
                          </div>
                          <div>
@@ -107,7 +107,7 @@
                                    <ul id="vehicle">
                                         <li>Jeep</li>
                                         <li>Bike</li>
-                                        <li>Car</lie>
+                                        <li>Car</li>
                                         <li>Bus</li>
                                         <li>Truck</li>
                                    </ul>
@@ -116,148 +116,171 @@
                                    <input type="text" id="reg_num" placeholder="Registeration number">
                               </div>
                               <div>
-                                   <a href="#parking"> <input type="button" value="Find Slot" onclick="findSlot()"></a>
+                                   <a href="#parking">
+                                        <input type="button" value="Find Slot" onclick="findSlot()">
+                                        <img id="tukur" src="./images/giphy.webp" />
+                                   </a>
                               </div>
-                              <!-- <i>Find Slot</i> -->
-                              <!-- <div class="input-box">
-                                   <input type="text" placeholder="Name">
-                              </div> -->
                          </form>
                     </div>
-                    <!-- <div class="selected-vehicle">
-                         <div>
-                              <img src="./" alt="">
-                         </div>
-                    </div> -->
                     <div class="parking-gif">
                          <img src="https://cdn.dribbble.com/users/2118336/screenshots/12113942/media/ec72a5e052af7792a64a1f3fd156af28.gif"
                               alt="">
                     </div>
                </div>
                <!--  -->
-               <br>
-               <hr>
+
                <!--  -->
                <section id="parking">
                     <div id="floor">
                          <div id="lane1" class="lane">
                               <div class="slot" id="slot-1">
-                                   <img src="./images/motorbike.png" alt="">
+                                   <img src="./images/Bike.png" alt="">
                               </div>
                               <div class="slot" id="slot-2">
-                                   <img src="./images/motorbike.png" alt="">
+                                   <img src="./images/Bike.png" alt="">
                               </div>
                               <div class="slot" id="slot-3">
-                                   <img src="./images/motorbike.png" alt="">
+                                   <img src="./images/Bike.png" alt="">
                               </div>
                               <div class="slot" id="slot-4">
-                                   <img src="./images/motorbike.png" alt="">
+                                   <img src="./images/Bike.png" alt="">
                               </div>
                               <div class="slot" id="slot-5">
-                                   <img src="./images/motorbike.png" alt="">
+                                   <img src="./images/Bike.png" alt="">
                               </div>
 
                          </div>
                          <div id="lane2" class="lane">
                               <div class="slot" id="slot-1">
-                                   <img src="./images/safari (2).png" alt="">
+                                   <img src="./images/Jeep.png" alt="">
                               </div>
                               <div class="slot" id="slot-2">
-                                   <img src="./images/safari (2).png" alt="">
+                                   <img src="./images/Jeep.png" alt="">
                               </div>
                               <div class="slot" id="slot-3">
-                                   <img src="./images/safari (2).png" alt="">
+                                   <img src="./images/Jeep.png" alt="">
                               </div>
                               <div class="slot" id="slot-4">
-                                   <img src="./images/safari (2).png" alt="">
+                                   <img src="./images/Jeep.png" alt="">
                               </div>
                               <div class="slot" id="slot-5">
-                                   <img src="./images/safari (2).png" alt="">
+                                   <img src="./images/Jeep.png" alt="">
                               </div>
 
                          </div>
                          <div id="lane3" class="lane">
                               <div class="slot" id="slot-1">
-                                   <img src="./images/car1.png" alt="">
+                                   <img src="./images/Car.png" alt="">
 
                               </div>
                               <div class="slot" id="slot-2">
-                                   <img src="./images/car1.png" alt="">
+                                   <img src="./images/Car.png" alt="">
 
                               </div>
                               <div class="slot" id="slot-3">
-                                   <img src="./images/car1.png" alt="">
+                                   <img src="./images/Car.png" alt="">
 
                               </div>
                               <div class="slot" id="slot-4">
-                                   <img src="./images/car1.png" alt="">
+                                   <img src="./images/Car.png" alt="">
 
                               </div>
                               <div class="slot" id="slot-5">
-                                   <img src="./images/car1.png" alt="">
+                                   <img src="./images/Car.png" alt="">
 
                               </div>
 
                          </div>
                          <div id="lane4" class="lane">
                               <div class="slot" id="slot-1">
-                                   <img src="./images/bus (1).png" alt="">
+                                   <img src="./images/Bus.png" alt="">
                               </div>
                               <div class="slot" id="slot-2">
-                                   <img src="./images/bus (1).png" alt="">
+                                   <img src="./images/Bus.png" alt="">
                               </div>
                               <div class="slot" id="slot-3">
-                                   <img src="./images/bus (1).png" alt="">
+                                   <img src="./images/Bus.png" alt="">
                               </div>
                               <div class="slot" id="slot-4">
-                                   <img src="./images/bus (1).png" alt="">
+                                   <img src="./images/Bus.png" alt="">
                               </div>
                               <div class="slot" id="slot-5">
-                                   <img src="./images/bus (1).png" alt="">
+                                   <img src="./images/Bus.png" alt="">
                               </div>
 
                          </div>
                          <div id="lane5" class="lane">
                               <div class="slot" id="slot-1">
-                                   <img src="./images/delivery-truck.png" alt="">
+                                   <img src="./images/Truck.png" alt="">
                               </div>
                               <div class="slot" id="slot-2">
-                                   <img src="./images/delivery-truck.png" alt="">
+                                   <img src="./images/Truck.png" alt="">
                               </div>
                               <div class="slot" id="slot-3">
-                                   <img src="./images/delivery-truck.png" alt="">
+                                   <img src="./images/Truck.png" alt="">
                               </div>
                               <div class="slot" id="slot-4">
-                                   <img src="./images/delivery-truck.png" alt="">
+                                   <img src="./images/Truck.png" alt="">
                               </div>
                               <div class="slot" id="slot-5">
-                                   <img src="./images/delivery-truck.png" alt="">
+                                   <img src="./images/Truck.png" alt="">
                               </div>
 
                          </div>
                     </div>
                     <div class="parking-recipt">
-                         <h1>Parking Recipt</h1>
 
                          <div class="recipt-container">
-                              <div class="recipt">
-                                   Receipt no.: <span>E3231</span>
+                              <h1>--Parking Receipt--</h1>
+                              <div class="recipt-date">
+                                   <div class="recipt">
+                                        Receipt no: <span> E3231</span>
+                                   </div>
+                                   <div class="date">
+                                        Date: <span> 26.01.2200</span>
+                                   </div>
                               </div>
                               <div class="name">
-                                   name: <span>Karan</span>
+                                   Name: <span> Karan</span>
 
                               </div>
                               <div class="reg_num">
-                                   Reg no.: <span>UP32 12 2312</span>
+                                   Reg no: <span> UP32 12 2312</span>
                               </div>
-                              <div class="date">
-                                   Date: <span>26 jan</span>
+
+                              <div class="type">
+                                   Vehicle type: <span> Wrangler</span>
                               </div>
-                              <div class="promo">
-                                   <input type="text" placeholder="Enter Coupon code">
+
+                              <div class="floor-slot">
+                                   <div class="floor">
+                                        Floor no: <span>01</span>
+                                   </div>
+                                   <span>|</span>
+                                   <div class="Lane">
+                                        Lane no: <span>04</span>
+                                   </div>
+                                   <span>|</span>
+                                   <div class="Slot">
+                                        Slot no: <span> 04</span>
+                                   </div>
+
                               </div>
-                              <div class="apply_promo">
-                                   <button>Apply Promo</button>
+                              <div class="totalPrice">
+                                   Total price: <span> ₹ 40.00/-</span>
+                              </div>
+                              <div class="promo-code">
+                                   <div class="promo">
+                                        <input type="text" placeholder="Enter Coupon code">
+                                   </div>
+                                   <div class="apply_promo">
+                                        <button>Apply Promo</button>
+                                   </div>
+                              </div>
+
+                              <div class="pay">
+                                   <button>Pay <span>₹ 40.00/-</span></button>
                               </div>
                          </div>
                     </div>
