--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                                         Receipt no: <span> E3231</span>
                                    </div>
                                    <div class="date">
-                                        Date: <span> 26.01.2200</span>
+                                        Date: <span> 26 Jan, 2200</span>
                                    </div>
                               </div>
                               <div class="name">
