Download option + github Link + funtionalities

--- a/index.html
+++ b/index.html
@@ -381,18 +381,34 @@
                     <div class="message-img">
                          <img src="./images/message.webp" alt="">
                     </div>
-                    <form id="contactForm">
-                         <div class="input"><input type="text" placeholder="Enter your name 📛"></div>
-                         <div class="input"><input type="text" placeholder="Enter your email 📧"></div>
-                         <div class="input"><input type="text" placeholder="Enter your number ☎️"></div>
-                         <div class="input">
-                              <textarea name="" id="" cols="30" rows=5" placeholder="Suggestion"></textarea>
-                         </div>
+                    <div id="contactForm">
+
+                         <form id="contactUsForm">
+                              <div class="input"><input type="text" placeholder="Enter your name 📛"></div>
+                              <div class="input"><input type="text" placeholder="Enter your email 📧"></div>
+                              <div class="input"><input type="text" placeholder="Enter your number ☎️"></div>
+                              <div class="input">
+                                   <textarea name="" id="" cols="30" rows=5" placeholder="Suggestion"></textarea>
+                              </div>
+                         </form>
                          <div class="input btn">
-                              <a href="PabloParkingSource.zip" download><input type="button" value="Source Code"></a>
-                              <input type="button" value="Send Message">
+                              <div class="source">
+                                   <div>
+                                        <a href="https://github.com/Vishwa9011/PabloParking" target="_blank">
+                                             <button>Source Code on GitHub</button>
+                                        </a>
+                                   </div>
+                                   <div class="download">
+                                        <a href="PabloParkingSource.zip" download>
+                                             <img src="./images/download.png" alt="">
+                                        </a>
+                                   </div>
+                              </div>
+                              <div>
+                                   <button onclick="">Send Message</button>
+                              </div>
                          </div>
-                    </form>
+                    </div>
 
                </div>
 
